--- a/src/components/atoms/Avatar/avatar.module.css
+++ b/src/components/atoms/Avatar/avatar.module.css
@@ -1,7 +1,10 @@
 .avatarMask {
     border-radius: 1000px;
-    border: 3px solid #FF4C29;
     overflow: hidden;
+}
+
+.avatarOutline {
+    border: 3px solid white;
 }
 
 .avatarMask img {
