--- a/src/components/atoms/Header/header.module.css
+++ b/src/components/atoms/Header/header.module.css
@@ -4,6 +4,9 @@
     align-items: center;
     margin: 0;
     padding: 16px;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .headerBaseLeft {
