adjust Input TextInput Button, created ButtonSpan InfoContactAdd

--- a/src/components/atoms/Input/textinput.module.css
+++ b/src/components/atoms/Input/textinput.module.css
@@ -1,7 +1,8 @@
 .textInputContainer {
-    margin: 20px 8px 8px 8px;
+    margin: 20px 12px 12px 12px;
     border: none;
     outline: none;
     font-size: 18px;
     position: relative;
+    background-color: transparent;
 }
