--- a/src/components/atoms/Content/content.module.css
+++ b/src/components/atoms/Content/content.module.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 16px;
     display: flex;
-    flex: 1;
     flex-direction: column;
+}
+
+.contentBox {
+    flex: 1;
+    overflow: scroll;
 }
