--- a/src/components/atoms/Input/input.module.css
+++ b/src/components/atoms/Input/input.module.css
@@ -2,7 +2,7 @@
     position: relative;
     background-color: white;
     border: 2px solid #FF4C29;
-    margin: 16px 0;
+    margin: 16px 0 4px 0;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
