--- a/src/components/atoms/Input/selectinput.module.css
+++ b/src/components/atoms/Input/selectinput.module.css
@@ -13,6 +13,10 @@
     background-color: transparent;
 }
 
+.shadow {
+    filter: drop-shadow(0px 2px 20px rgba(0, 0, 0, 0.1));
+}
+
 .selectInputOptions {
     display: flex;
     flex-direction: column;
