--- a/src/components/atoms/Input/selectinput.module.css
+++ b/src/components/atoms/Input/selectinput.module.css
@@ -8,6 +8,10 @@
     background-color: white;
 }
 
+.disabledFontColor {
+    color: darkgrey;
+}
+
 .borderRound {
     border-radius: 30px;
     background-color: transparent;
